--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -319,3 +319,130 @@ canvas {
   width: 100%;
   height: 100%;
 }
+
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: stretch;
+  background: #000;
+  color: #aaa;
+  font-size: 0.5rem;
+  overflow: hidden;
+  &.gray {
+    background: #3f3f3f;
+  }
+}
+
+button.active {
+  background: #f00;
+}
+
+.main {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+canvas {
+  display: block;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  background: #fff;
+}
+
+.tabs {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  .tab-pane {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    @include activatable;
+    &.active {
+      opacity: 1;
+      pointer-events: auto;
+    }
+  }
+}
+.toolbar-main {
+  position: fixed;
+  left: 0;
+  top: 0;
+  margin: 0.125rem;
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  justify-content: flex-start;
+  z-index: 5;
+  * {
+    margin: 0.125rem;
+    height: 1rem;
+  }
+  #frame-field {
+    width: 6em;
+  }
+  .message {
+    cursor: default;
+    opacity: 0;
+    transition: opacity 500ms;
+    &.visible {
+      opacity: 1
+    }
+    background: #c63;
+    color: #fff;
+    font-weight: bold;
+    line-height: 1rem;
+    padding: 0 0.25rem;
+  }
+}
+
+.menu-controls {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  width: max(min(20vw, 20rem), 10rem);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: flex-end;
+  list-style: none;
+  z-index: 10;
+  .control {
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+    justify-content: center;
+    label {
+      flex: 0 0 10em;
+      width: 10em;
+      color: #fff;
+      text-align: right;
+      padding: 0 0.5em;
+    }
+    input[type="text"] {
+      flex: 0 0 3em;
+      width: 3em;
+    }
+    input[type="range"] {
+      width: 100%;
+    }
+
+  }
+}
+
+.hideable {
+  transition: opacity $t-medium;
+}
+
+body.hidden {
+  .hideable {
+    opacity: 0;
+  }
+}
