--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -18,6 +18,18 @@ html {
 body {
   height: 100%;
   transition: opacity $t-long;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: stretch;
+  background: #000;
+  // background: red;
+  color: #aaa;
+  font-size: 0.5rem;
+  overflow: hidden;
+  &.gray {
+    background: #3f3f3f;
+  }
 }
 
 *, *::before, *::after {
@@ -318,20 +330,6 @@ canvas {
   display: block;
   width: 100%;
   height: 100%;
-}
-
-body {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: stretch;
-  background: #000;
-  color: #aaa;
-  font-size: 0.5rem;
-  overflow: hidden;
-  &.gray {
-    background: #3f3f3f;
-  }
 }
 
 button.active {
