--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -23,7 +23,7 @@ body {
   justify-content: center;
   align-items: stretch;
   background: #000;
-  // background: red;
+  background: red;
   color: #aaa;
   font-size: 0.5rem;
   overflow: hidden;
