lib reorg and sundry fixes

--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -39,293 +39,6 @@ body {
   box-sizing: border-box;
 }
 
-img {
-  display: block;
-  border: 0;
-}
-
-.alert {
-  &, * {
-    cursor: pointer;
-  }
-}
-
-div, button, a {
-  transition: all $t-short;
-}
-
-a {
-  color: $link-fg;
-  &:hover {
-    color: $link-hover;
-  }
-}
-
-a:hover {
-  color: $link-hover;
-}
-
-.container {
-  margin: 0 auto;
-  max-width: 40rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-.flex {
-  display: flex;
-  &.flex-col { flex-direction: column; }
-  &.flex-col-reverse { flex-direction: column-reverse; }
-  &.flex-row { flex-direction: row; }
-  &.flex-row-reverse { flex-direction: row-reverse; }
-  &.wrap { flex-wrap: wrap; }
-  &.wrap-reverse { flex-wrap: wrap-reverse; }
-  &.justify-start { justify-content: flex-start; }
-  &.justify-end { justify-content: flex-end; }
-  &.justify-center { justify-content: center; }
-  &.justify-between { justify-content: space-between; }
-  &.justify-around { justify-content: space-around; }
-  &.justify-evenly { justify-content: space-evenly; }
-  &.justify-left { justify-content: left; }
-  &.justify-right { justify-content: right; }
-
-  &.wrap-start { align-content: flex-start; }
-  &.wrap-end { align-content: flex-end; }
-  &.wrap-center { align-content: center; }
-  &.wrap-stretch { align-content: stretch; }
-  &.wrap-between { align-content: space-between; }
-  &.wrap-around { align-content: space-around; }
-
-  &.align-start { align-items: flex-start; }
-  &.align-end { align-items: flex-end; }
-  &.align-center { align-items: center; }
-  &.align-stretch { align-items: stretch; }
-  &.align-baseline { align-items: baseline; }
-  &.gap-1 { gap: 1rem; }
-  &.gap-2 { gap: 2rem; }
-}
-
-.flex-child {
-  &.shrink, &.flex-0-1 { flex: 0 1; }
-  &.grow, &.flex-1-0 { flex: 1 0; }
-  &.both, &.flex-1-1 { flex: 1 1; }
-  &.flex-2-1 { flex: 2 1; }
-  &.flex-1-2 { flex: 1 2; }
-  &.basis-full { flex-basis: 100% }
-  &.basis-auto { flex-basis: auto; }
-  &.basis-zero { flex-basis: 0; }
-}
-
-.margin-auto {
-  margin: auto;
-}
-
-.pad-1 { padding: 1rem; }
-.pad-2 { padding: 2rem; }
-.pad-3 { padding: 3rem; }
-.pad-4 { padding: 4rem; }
-.pad-5 { padding: 5rem; }
-.pad-child-1 > * { padding: 1rem; }
-.pad-child-2 > * { padding: 2rem; }
-.pad-child-3 > * { padding: 3rem; }
-.pad-child-4 > * { padding: 4rem; }
-.pad-child-5 > * { padding: 5rem; }
-
-.row {
-  @include flex(row, space-between, stretch, wrap);
-}
-
-.col {
-  flex: 1 1 auto;
-}
-
-.spaced {
-    &.spaced-1 {
-    &.row, .row {
-      // @include margin-h(-var(--tet));
-      margin: calc(var(--tet) * -1);
-    }
-    &.col, .col {
-      padding: var(--tet);
-    }
-  }
-  &.spaced-2 {
-    .row {
-      margin: calc(var(--tet) * 2 * -1);
-    }
-    .col {
-      padding: calc(var(--tet) * 2);
-    }
-  }
-}
-
-@include breakpoint(sm) {
-  .sm-1 { width: $c1; }
-  .sm-2 { width: $c2; }
-  .sm-3 { width: $c3; }
-  .sm-4 { width: $c4; }
-  .sm-5 { width: $c5; }
-  .sm-6 { width: $c6; }
-  .sm-7 { width: $c7; }
-  .sm-8 { width: $c8; }
-  .sm-9 { width: $c9; }
-  .sm-10 { width: $c10; }
-  .sm-11 { width: $c11; }
-  .sm-12 { width: $c12; }
-}
-@include breakpoint(md) {
-  .md-1 { width: $c1; }
-  .md-2 { width: $c2; }
-  .md-3 { width: $c3; }
-  .md-4 { width: $c4; }
-  .md-5 { width: $c5; }
-  .md-6 { width: $c6; }
-  .md-7 { width: $c7; }
-  .md-8 { width: $c8; }
-  .md-9 { width: $c9; }
-  .md-10 { width: $c10; }
-  .md-11 { width: $c11; }
-  .md-12 { width: $c12; }
-}
-@include breakpoint(lg) {
-  .lg-1 { width: $c1; }
-  .lg-2 { width: $c2; }
-  .lg-3 { width: $c3; }
-  .lg-4 { width: $c4; }
-  .lg-5 { width: $c5; }
-  .lg-6 { width: $c6; }
-  .lg-7 { width: $c7; }
-  .lg-8 { width: $c8; }
-  .lg-9 { width: $c9; }
-  .lg-10 { width: $c10; }
-  .lg-11 { width: $c11; }
-  .lg-12 { width: $c12; }
-}
-@include breakpoint(xl) {
-  .xl-1 { width: $c1; }
-  .xl-2 { width: $c2; }
-  .xl-3 { width: $c3; }
-  .xl-4 { width: $c4; }
-  .xl-5 { width: $c5; }
-  .xl-6 { width: $c6; }
-  .xl-7 { width: $c7; }
-  .xl-8 { width: $c8; }
-  .xl-9 { width: $c9; }
-  .xl-10 { width: $c10; }
-  .xl-11 { width: $c11; }
-  .xl-12 { width: $c12; }
-}
-@include breakpoint(xx) {
-  .xx-1 { width: $c1; }
-  .xx-2 { width: $c2; }
-  .xx-3 { width: $c3; }
-  .xx-4 { width: $c4; }
-  .xx-5 { width: $c5; }
-  .xx-6 { width: $c6; }
-  .xx-7 { width: $c7; }
-  .xx-8 { width: $c8; }
-  .xx-9 { width: $c9; }
-  .xx-10 { width: $c10; }
-  .xx-11 { width: $c11; }
-  .xx-12 { width: $c12; }
-}
-
-.spacer {
-  flex: 0 1 100%;
-}
-
-.mr-auto { margin-right: auto !important; }
-.ml-auto { margin-left: auto !important; }
-.mt-auto { margin-top: auto !important; }
-.mb-auto { margin-bottom: auto !important; }
-.mh-auto { margin-left: auto; margin-right: auto; }
-.mv-auto { margin-top: auto; margin-bottom: auto; }
-
-h1, h2, h3, h4, h5, h6 {
-  margin: 0.5rem 0;
-}
-
-.smaller {
-  font-size: calc(3 / 4 * 1em);
-}
-
-.larger {
-  font-size: calc(4 / 3 * 1em);
-}
-
-#app {
-  padding-top: 2rem;
-}
-
-.navbar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 2rem;
-  // font-size: 0.8rem;
-  font-family: $nav-sans;
-  line-height: 1.5rem;
-  &.bottom {
-    top: auto;
-    bottom: 0;
-  }
-  a {
-    text-decoration: none;
-    color: inherit;
-    &:hover {
-      color: $link-hover;
-    }
-  }
-  .navbar-brand {
-    @include flex(row, center, center);
-    padding-right: 0.5rem;
-    * {
-      margin-top: auto;
-      margin-bottom: auto;
-    }
-  }
-  .navbar-group, .navbar-collapse {
-    @include flex(row, space-between, stretch);
-    flex: 0 1 auto;
-    > * {
-      padding: 0.25rem 0.25rem;
-    }
-  }
-}
-
-.group {
-  .group-toggle {
-    width: 2rem;
-    height: 2rem;
-    line-height: 2rem;
-  }
-  &.collapsed {
-    .group-body {
-      opacity: 0;
-      height: 0;
-    }
-  }
-}
-
-
-.fade {
-  transition: opacity 500ms;
-  opacity: 0;
-  &.show, &.enter-active {
-    opacity: 1;
-  }
-  &.exit-active {
-    opacity: 0;
-  }
-}
-
-img.logo {
-  display: block;
-  max-height: 1.5em;
-  width: auto;
-}
-
 canvas {
   display: block;
   width: 100%;
@@ -333,7 +46,7 @@ canvas {
 }
 
 button.active {
-  background: #f00;
+  background: #c30;
 }
 
 .main {
@@ -352,23 +65,6 @@ canvas {
   background: #fff;
 }
 
-.tabs {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  .tab-pane {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    @include activatable;
-    &.active {
-      opacity: 1;
-      pointer-events: auto;
-    }
-  }
-}
 .toolbar-main {
   position: fixed;
   left: 0;
@@ -383,55 +79,8 @@ canvas {
     margin: 0.125rem;
     height: 1rem;
   }
-  #frame-field {
+  #counter-field {
     width: 6em;
-  }
-  .message {
-    cursor: default;
-    opacity: 0;
-    transition: opacity 500ms;
-    &.visible {
-      opacity: 1
-    }
-    background: #c63;
-    color: #fff;
-    font-weight: bold;
-    line-height: 1rem;
-    padding: 0 0.25rem;
-  }
-}
-
-.menu-controls {
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  width: max(min(20vw, 20rem), 10rem);
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  justify-content: flex-end;
-  list-style: none;
-  z-index: 10;
-  .control {
-    display: flex;
-    flex-direction: row;
-    align-items: stretch;
-    justify-content: center;
-    label {
-      flex: 0 0 10em;
-      width: 10em;
-      color: #fff;
-      text-align: right;
-      padding: 0 0.5em;
-    }
-    input[type="text"] {
-      flex: 0 0 3em;
-      width: 3em;
-    }
-    input[type="range"] {
-      width: 100%;
-    }
-
   }
 }
 
@@ -452,6 +101,7 @@ body.hidden {
   bottom: auto;
   right: 0;
   top: 0;
+  z-index: 10;
   .cr, .close-button {
     background: #000000bf !important;
   }
