Create wave-new ca Add display field, hooks

--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -79,7 +79,7 @@ canvas {
     margin: 0.125rem;
     height: 1rem;
   }
-  #counter-field {
+  #counter-field, #status-field {
     width: 6em;
   }
 }
